--- a/templates/actor/actor-personagem-sheet.html
+++ b/templates/actor/actor-personagem-sheet.html
@@ -5,7 +5,8 @@
     <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100" />
     <div class="header-fields">
       <h1 class="charname"><input class="input-sem-borda" name="name" type="text" value="{{actor.name}}"
-          placeholder="Nome" /></h1>
+          placeholder="Nome" />
+      </h1>
       {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
       from 1 to 12 and will create that number of columns. --}}
@@ -14,6 +15,15 @@
         {{!-- "flex-group-center" is also defined in the _grid.scss file
         and it will add a small amount of padding, a border, and will
         center all of its child elements content and text. --}}
+        <div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
+        <h4>
+          <div class="flexrow flex-group-center" style="font-size: 150%;">
+            <input class="input-sem-borda-menor flex-group-center" name="system.pontos" type="text" value="{{system.pontos}}"
+              placeholder="Pontos" data-dtype="Number" />
+            <label class="resource-label rollable flexlarge align-left"> {{localize "TRESDETALPHA.Pontos.label"}}</label>
+          </div>
+        </h4>
 
       </div>
     </div>
@@ -23,7 +33,7 @@
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
     <a class="item" data-tab="features">{{localize "TRESDETALPHA.Aba.caracteristica"}}</a>
-    <a class="item" data-tab="description">{{localize "TRESDETALPHA.Aba.descricao"}}</a>
+    <a class="item" data-tab="description">{{localize "TRESDETALPHA.Aba.historia"}}</a>
     <a class="item" data-tab="items">{{localize "TRESDETALPHA.Aba.item"}}</a>
     <a class="item" data-tab="spells">{{localize "TRESDETALPHA.Aba.magia"}}</a>
     <a class="item" data-tab="effects">{{localize "TRESDETALPHA.Aba.efeito"}}</a>
@@ -40,7 +50,7 @@
           {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
           use both the "grid" and "grid-Ncol" class where "N" can be any number
           from 1 to 12 and will create that number of columns. --}}
-          <div class="abilities flexcol bordas-campos-ficha" >
+          <div class="abilities flexcol bordas-campos-ficha">
             <div class="resource-label flex-group-center"> {{localize "TRESDETALPHA.Caracteristicas.label"}} </div>
             <div class="row">&nbsp;</div>
             {{#each system.abilities as |ability key|}}
@@ -53,7 +63,6 @@
               <span>&nbsp;&nbsp;</span>
             </div>
             {{/each}}
-            <div class="row">&nbsp;</div>
           </div>
 
           <!-- AQUI !!!!!-->
@@ -90,7 +99,6 @@
               <input class="input-sem-borda-menor" type="text" name="system.experiencia.value"
                 value="{{system.experiencia.value}}" placeholder="0" data-dtype="Number" />
             </div>
-            <div class="row">&nbsp;</div>
           </div>
 
           <div class="row">&nbsp;</div>
@@ -103,38 +111,49 @@
               <label for="system.attributes.tipoDeDano.forca.value" class="resource-label rollable align-left">
                 &nbsp;&nbsp;{{localize "TRESDETALPHA.Caracteristicas.forca.label"}} :
               </label>
-              <input type="text" style="width:150px" name="system.attributes.tipoDeDano.forca.value"
-                value="{{system.attributes.tipoDeDano.forca.value}}" data-dtype="String" />
+              <select class="ability flexrow" name="system.attributes.tipoDeDano.forca.value" type="text"
+                value="{{system.attributes.tipoDeDano.forca.value}}" data-dtype="String" height="50"
+                style="font-size: 100%;">
+                {{#select system.attributes.tipoDeDano.forca.value}}
+                <option value=""></option>
+                <option value="Corte">Corte</option>
+                <option value="Esmagamento">Esmagamento</option>
+                <option value="Perfuração">Perfuração</option>
+                {{/select}}
+              </select>
             </div>
             <div class="ability flexrow flex-group-center">
               <label for="system.attributes.tipoDeDano.poderDeFogo.value" class="resource-label rollable align-left">
                 &nbsp;&nbsp;{{localize "TRESDETALPHA.Caracteristicas.poderDeFogo.label"}} :
               </label>
-              <input type="text" style="width:150px" name="system.attributes.tipoDeDano.poderDeFogo.value"
-                value="{{system.attributes.tipoDeDano.poderDeFogo.value}}" data-dtype="String" />
+              <select class="ability flexrow" name="system.attributes.tipoDeDano.poderDeFogo.value" type="text"
+                value="{{system.attributes.tipoDeDano.poderDeFogo.value}}" data-dtype="String" height="50"
+                style="font-size: 100%;">
+                {{#select system.attributes.tipoDeDano.poderDeFogo.value}}
+                <option value=""></option>
+                <option value="Elétrico">Elétrico</option>
+                <option value="Fogo">Fogo</option>
+                <option value="Químico">Químico</option>
+                <option value="Sônico">Sônico</option>
+                {{/select}}
+              </select>
             </div>
-            <div class="row">&nbsp;</div>
           </div>
 
           <div class="row">&nbsp;</div>
-          <div class="resource flex-group-center bordas-campos-ficha">
+          <div class="resource bordas-campos-ficha">
             <div class="resource-label flex-group-center"> {{localize "TRESDETALPHA.Combate.label"}} </div>
             <div class="row">&nbsp;</div>
-            <div class="ability flexrow flex-group-center">
-              <label for="system.attributes.forcaDefesa.value" class="resource-label rollable align-left">
-                {{localize "TRESDETALPHA.Forca.defesa.label"}} ({{localize "TRESDETALPHA.Forca.defesa.abreviacao"}})&nbsp;
-              </label>
-              <input type="text" style="width:145px" name="system.attributes.forcaDefesa.value"
-                value="{{system.attributes.forcaDefesa.value}}" data-dtype="Number" />
-            </div>
             <div>
               <strong>
-                {{localize "TRESDETALPHA.Forca.ataque.label"}} ({{localize "TRESDETALPHA.Forca.ataque.abreviacao"}})&nbsp;
+                &nbsp;&nbsp;{{localize "TRESDETALPHA.Forca.ataque.label"}} ({{localize
+                "TRESDETALPHA.Forca.ataque.abreviacao"}}) :&nbsp;
               </strong>
               <label for="system.attributes.forcaDeAtaque.forca.value" class="resource-label align-left">
-                {{localize "TRESDETALPHA.Caracteristicas.forca.abreviacao"}}:&nbsp;
+                {{localize "TRESDETALPHA.Caracteristicas.forca.label"}}:&nbsp;
               </label>
-              <label for=system.attributes.forcaDeAtaque.forca.value class="resource-label rollable flexlarge align-left"
+              <label for=system.attributes.forcaDeAtaque.forca.value
+                class="resource-label rollable flexlarge align-left"
                 data-roll="d6+@attributes.forcaDeAtaque.forca.value"
                 data-label="{{system.attributes.forcaDeAtaque.forca.value}}">{{system.attributes.forcaDeAtaque.forca.value}}</label>
               <span>&nbsp;</span>
@@ -147,46 +166,56 @@
                 data-label="{{system.attributes.forcaDeAtaque.poderDeFogo.value}}">{{system.attributes.forcaDeAtaque.poderDeFogo.value}}</label>
             </div>
             <div class="row">&nbsp;</div>
+            <div>
+              <label for="system.attributes.forcaDefesa.value" class="resource-label rollable align-left">
+                &nbsp;&nbsp;{{localize "TRESDETALPHA.Forca.defesa.label"}} ({{localize
+                "TRESDETALPHA.Forca.defesa.abreviacao"}}) :&nbsp;
+              </label>
+              <label for=system.attributes.forcaDefesa.value class="resource-label rollable flexlarge align-left"
+                data-roll="d6+@attributes.forcaDefesa.value"
+                data-label="{{system.attributes.forcaDefesa.value}}">{{system.attributes.forcaDefesa.value}}
+              </label>
+            </div>
           </div>
         </aside>
 
         <div class="resource flex-group-center">
+          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
+          module/helpers/templates.mjs --}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagemunica.html"}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-vantagens.html"}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-desvantagens.html"}}
           {{> "systems/tresdetalpha/templates/actor/parts/actor-pericias.html"}}
         </div>
-        
+
         <section class="main grid-span-2">
-          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in
-          module/helpers/templates.mjs --}}
-            <div class="resource flex-group-center"></div>
+          <div class="resource flex-group-center"></div>
         </section>
 
-  </section>
-  </div>
+      </section>
+    </div>
 
-  {{!-- Biography Tab --}}
-  <div class="tab biography" data-group="primary" data-tab="description">
-    {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
-    the rollData property. --}}
-    {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
-  </div>
+    {{!-- Biography Tab --}}
+    <div class="tab biography" data-group="primary" data-tab="description">
+      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to
+      the rollData property. --}}
+      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+    </div>
 
-  {{!-- Owned Spells Tab --}}
-  <div class="tab spells" data-group="primary" data-tab="spells">
-    {{> "systems/tresdetalpha/templates/actor/parts/actor-magias.html"}}
-  </div>
+    {{!-- Owned Spells Tab --}}
+    <div class="tab spells" data-group="primary" data-tab="spells">
+      {{> "systems/tresdetalpha/templates/actor/parts/actor-magias.html"}}
+    </div>
 
-  {{!-- Owned Items Tab --}}
-  <div class="tab items" data-group="primary" data-tab="items">
-    {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
-  </div>
+    {{!-- Owned Items Tab --}}
+    <div class="tab items" data-group="primary" data-tab="items">
+      {{> "systems/tresdetalpha/templates/actor/parts/actor-items.html"}}
+    </div>
 
-  {{!-- Active Effects Tab --}}
-  <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-    {{> "systems/tresdetalpha/templates/actor/parts/actor-effects.html"}}
-  </div>
+    {{!-- Active Effects Tab --}}
+    <div class="tab effects flexcol" data-group="primary" data-tab="effects">
+      {{> "systems/tresdetalpha/templates/actor/parts/actor-effects.html"}}
+    </div>
 
   </section>
 </form>
