feat: configured debugger and improved attributes and abilities handling at actor.mjs

--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -79,7 +79,7 @@
                 max="{{system.vida.max}}" placeholder="0" data-dtype="Number" />
               <span> / </span>
               <input class="input-sem-borda-menor" type="text" name="system.vida.max" value="{{system.vida.max}}"
-                data-dtype="Number" placeholder="0" disabled="disabled" />
+                data-dtype="Number" placeholder="0"/>
             </div>
             <div class="row">
               <label for="system.magia.value" class="resource-label">
@@ -90,7 +90,7 @@
                 max="{{system.magia.max}}" placeholder="0" data-dtype="Number" />
               <span> / </span>
               <input class="input-sem-borda-menor" type="text" name="system.magia.max" value="{{system.magia.max}}"
-                placeholder="0" data-dtype="Number" disabled="disabled" />
+                placeholder="0" data-dtype="Number"/>
             </div>
             <div class="row">
               <label for="system.attributes.level.value" class="resource-label">
