--- a/templates/actor/parts/actor-magias.html
+++ b/templates/actor/parts/actor-magias.html
@@ -2,7 +2,7 @@
   <li class="item flexrow items-header">
     <div class="item-name">{{localize "TRESDETALPHA.Nome"}}</div>
     <div class="item-controls">
-      <a class="item-control item-create" title="{{localize "TRESDETALPHA.Criar"}}" data-type="item"><i class="fas fa-plus"></i>{{localize "TRESDETALPHA.Add"}}</a>
+      <a class="item-control item-create" title="{{localize 'TRESDETALPHA.Criar'}}" data-type="magia"><i class="fas fa-plus"></i>{{localize "TRESDETALPHA.Add"}}</a>
     </div>
   </li>
   {{#each magias as |item id|}}
@@ -15,8 +15,8 @@
       </div>
       <div class="item-formula item-prop">{{item.system.formula}}</div>
       <div class="item-controls">
-        <a class="item-control item-edit" title="{{localize "TRESDETALPHA.Editar"}}"><i class="fas fa-edit"></i></a>
-        <a class="item-control item-delete" title="{{localize "TRESDETALPHA.Deletar"}}"><i class="fas fa-trash"></i></a>
+        <a class="item-control item-edit" title="{{localize 'TRESDETALPHA.Editar'}}"><i class="fas fa-edit"></i></a>
+        <a class="item-control item-delete" title="{{localize 'TRESDETALPHA.Deletar'}}"><i class="fas fa-trash"></i></a>
       </div>
     </li>
   {{/each}}
